--- a/TelAPI.html
+++ b/TelAPI.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="icon" href="scr.jpg">
 	<style type="text/css">
 		body {
 			background-color: #C59EFF;
@@ -41,19 +42,19 @@
 </head>
 
 <body>
-	<h1>Tel: <a href="https://t.me/Arseniychannels">ссылка</a> Мой телеграмм бот, из которого все
+	<h1>Tel: <a href="https://t.me/Arseniychannels">ссылка</a> Мой телеграмм канал, из которого все
 		сообщения выводятся здесь.</h1>
 	<div class="Main_post" style="display: none;">
 		<p class='posts'>
 
 		</p>
 		<p class="buttons">
-			<script src="https://yastatic.net/share2/share.js"></script>
-		<div class="ya-share2" data-curtain data-shape="round" data-color-scheme="whiteblack"
+			<div class="ya-share2" data-curtain data-shape="round" data-color-scheme="whiteblack"
 			data-services="vkontakte,facebook,odnoklassniki,telegram,twitter,viber,whatsapp"
 			data-access-token:facebook="fb-token" data-url="https://t.me/Arseniychannels/7"></div>
 		</p>
 	</div>
+	<script src="https://yastatic.net/share2/share.js"></script>
 	<script src="readAPI.js"></script>
 </body>
 
